; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/uxtheme/extr_system.c_test_IsThemed.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/uxtheme/extr_system.c_test_IsThemed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"Theming is %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"active\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"inactive\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"Test executable is %s\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"themed\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"not themed\00", align 1
@FALSE = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [16 x i8] c"Expected FALSE\0A\00", align 1
@E_HANDLE = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [31 x i8] c"Expected E_HANDLE, got 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_IsThemed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_IsThemed() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = call i64 (...) @IsThemeActive()
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i64
  %8 = select i1 %6, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0)
  %9 = call i32 @trace(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = call i64 (...) @IsAppThemed()
  store i64 %10, i64* %2, align 8
  %11 = load i64, i64* %2, align 8
  %12 = icmp ne i64 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0)
  %15 = call i32 @trace(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0), i8* %14)
  %16 = call i32 @SetLastError(i32 -559038737)
  %17 = call i64 @IsThemePartDefined(i32* null, i32 0, i32 0)
  store i64 %17, i64* %3, align 8
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* @FALSE, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 (i32, i8*, ...) @ok(i32 %21, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  %23 = call i64 (...) @GetLastError()
  %24 = load i64, i64* @E_HANDLE, align 8
  %25 = icmp eq i64 %23, %24
  %26 = zext i1 %25 to i32
  %27 = call i64 (...) @GetLastError()
  %28 = call i32 (i32, i8*, ...) @ok(i32 %26, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.7, i64 0, i64 0), i64 %27)
  ret void
}

declare dso_local i64 @IsThemeActive(...) #1

declare dso_local i32 @trace(i8*, i8*) #1

declare dso_local i64 @IsAppThemed(...) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i64 @IsThemePartDefined(i32*, i32, i32) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i64 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
